[gd_scene load_steps=26 format=3 uid="uid://br1fdpb7yan83"]

[ext_resource type="Script" uid="uid://do2s0tf3bcqob" path="res://Scripts/Player/player_controller.gd" id="1_uf6o1"]
[ext_resource type="Script" uid="uid://dfcraafnehyqn" path="res://Scripts/Player/reticle.gd" id="2_f82lh"]
[ext_resource type="Theme" uid="uid://di4uxb41akeps" path="res://UI/themes/debug.tres" id="3_latgb"]
[ext_resource type="Script" uid="uid://c8j0hkh6527yk" path="res://Scripts/Others/debug.gd" id="4_tel0m"]
[ext_resource type="Script" uid="uid://qv1gpd1fw8fn" path="res://Scripts/Player/Player_states/sprinting_player_state.gd" id="5_2whai"]
[ext_resource type="Script" uid="uid://btpknlnmhv2ge" path="res://Scripts/Player/Player_states/state_machine.gd" id="5_wlj8n"]
[ext_resource type="Script" uid="uid://cmqcw6nib5rmj" path="res://Scripts/Player/Player_states/idle_player_state.gd" id="6_tsd0u"]
[ext_resource type="Script" uid="uid://bnps6pdqffq2w" path="res://Scripts/Player/Player_states/crouching_player_state.gd" id="6_unrbl"]
[ext_resource type="Script" uid="uid://bj8npgklwkea5" path="res://Scripts/Player/Player_states/sliding_player_state.gd" id="7_qm4tl"]
[ext_resource type="Script" uid="uid://bicrywb4mqjsr" path="res://Scripts/Player/Player_states/walking_player_state.gd" id="7_up7bs"]
[ext_resource type="Script" uid="uid://kye53ldwot7x" path="res://Scripts/Player/Player_states/jumping_player_state.gd" id="8_4whux"]
[ext_resource type="Script" uid="uid://ckqw7s26q3j6r" path="res://Scripts/Player/Player_states/falling_player_state.gd" id="9_ihh5j"]
[ext_resource type="Script" uid="uid://dx7nmiy3wodd6" path="res://Scripts/Player/Player_states/wall_run_player_state.gd" id="10_aypfj"]
[ext_resource type="Script" uid="uid://bhtuxx8blkkjy" path="res://Assets/Objects/wall_jump_player_state.gd" id="11_wnki6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fifh5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nln20"]
albedo_color = Color(0.88873, 0, 0.120148, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n8mbl"]
material = SubResource("StandardMaterial3D_nln20")

[sub_resource type="Animation" id="Animation_kjyey"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ihh5j"]
resource_name = "HardFall"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.25, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_ep1yi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShapeCast3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/Camera3D:fov")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}

[sub_resource type="Animation" id="Animation_y81fw"]
resource_name = "Sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShapeCast3D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/Camera3D:fov")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}

[sub_resource type="Animation" id="Animation_aypfj"]
resource_name = "SoftFall"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.3, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoclx"]
_data = {
&"Crouch": SubResource("Animation_kjyey"),
&"HardFall": SubResource("Animation_ihh5j"),
&"RESET": SubResource("Animation_ep1yi"),
&"Sliding": SubResource("Animation_y81fw"),
&"SoftFall": SubResource("Animation_aypfj")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_5hrs7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1w1v"]
bg_color = Color(0, 0, 0, 0.631373)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.756863)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATIONPLAYER", "CROUCH_SHAPECAST")]
collision_layer = 2
collision_mask = 127
script = ExtResource("1_uf6o1")
CAMERA_CONTROLLER = NodePath("Head/Camera3D")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("ShapeCast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_fifh5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_n8mbl")
skeleton = NodePath("")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uoclx")
}

[node name="WallCheck" type="Node3D" parent="."]

[node name="LeftWallCheck" type="RayCast3D" parent="WallCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 0)
target_position = Vector3(-1.5, 0, 0)
collision_mask = 64

[node name="RightWallCheck" type="RayCast3D" parent="WallCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0)
target_position = Vector3(1.5, 0, 0)
collision_mask = 64

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_5hrs7")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_wlj8n")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_tsd0u")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_up7bs")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("5_2whai")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_unrbl")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_qm4tl")
SPEED = null

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_4whux")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_ihh5j")

[node name="WallRunPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_aypfj")

[node name="WallJumpPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_wnki6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UserInterface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="CanvasLayer/UserInterface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_f82lh")
RETICLE_LINES = [NodePath("TopLine"), NodePath("RightLine"), NodePath("BottomLine"), NodePath("LeftLine")]
PLAYER_CONTROLLER = NodePath("../../..")
RETICLE_DISTANCE = 3.0

[node name="TopLine" type="Line2D" parent="CanvasLayer/UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="RightLine" type="Line2D" parent="CanvasLayer/UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="BottomLine" type="Line2D" parent="CanvasLayer/UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="LeftLine" type="Line2D" parent="CanvasLayer/UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="Panel" parent="CanvasLayer/UserInterface"]
layout_mode = 0
offset_right = 343.0
offset_bottom = 234.0
theme = ExtResource("3_latgb")
theme_override_styles/panel = SubResource("StyleBoxFlat_x1w1v")
script = ExtResource("4_tel0m")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UserInterface/DebugPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UserInterface/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
